header css resolved
Former-commit-id: d0e54478f01bbacaa490a7fedb24395bafd940e2 [formerly 893badee0fca53bf556ad165e218711e3e745322]
Former-commit-id: bb4aa2d0f1074d81976d6adf5ad7b08c4bf5120a

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-		<link rel="stylesheet" href="css/maintest.nest.css">
+		<link rel="stylesheet" href="css/main.nest.css">
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="js/modernizr-2.8.3.min.js"></script>
 	</head>
 <body>
 	<!--[if lt IE 9]>
@@ -27,9 +28,15 @@
 	    document.createElement("time"   );
 	  </script>
 	  <noscript>
-	     <strong>Warning !</strong>
-	     Because your browser does not support HTML5, some elements are created using JavaScript.
-	     Unfortunately your browser has disabled scripting. Please enable it in order to display this page.
+
+	     Your browser is obsolete, or it has Javascript turned off. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers or ones without Javascript. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions, with or without Javascript. And if you are concerned about vulnerabilities due to scripts, you'd do better to uninstall Java (which is a different language), get rid of Adobe Reader (Firefox and Chrome can both read .pdf files without the reader), and keep your browser up to date. Look for security and privacy add-ons as well for peace of mind.
+			 Really, on behalf of The Web, please upgrade to a modern browser
+			 and don't turn off Javascript.
+			 Thank you, thank you, thank you.
+			 	<a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>
+			 	<a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome</a>
+
+
 	  </noscript>
 	<![endif]-->
 	  	<nav>
@@ -70,10 +77,10 @@
   				</ul>
   		</nav>
 		<header>
-			<div id="Logo">
+			<div class="sec1">
 				<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 			</div>
-			<div id="note">
+				<div class="sec2">
 				 <p class="accent">What would it really be like<br> to live on the Moon?</p>
 				</div>
 	</header>
@@ -142,7 +149,6 @@ options shown on the <a href="project.html">Project</a> page.
 			</div>
 		</div>
 	</section>
-
 <aside>
 		<div class="sideDiv"id="RSS-feed">
 If you can't see our RSS feed, you need to enable Javascript
@@ -154,7 +160,19 @@ If you can't see our RSS feed, you need to enable Javascript
 		</div>
 </aside>
 </div>
-
+<div class="container">
+	<section>
+		<div class="outerDiv">
+			<div class="innerDiv">
+				<p>There is going to be some missing content and general disarray for
+					a little as all the content of this site is reformatted and
+					redesigned. It shouldn't take too long to get back in shape. I just
+					feel a need to mention it - so much to do...
+				</p>
+			</div>
+		</div>
+	</section>
+</div>
 
 
 <script>
