--- a/colonies.html
+++ b/colonies.html
@@ -75,9 +75,11 @@
 			</ul>
 	</nav>
 <header>
-		<img class="sec1" src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
-		<div class="sec2">
-		 <p class="accent">What would it really be like<br> to live on the Moon?</p>
+	<div id="Logo">
+		<img src="http://www.moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+	</div>
+		<div id="note">
+		 <p class="accent">What would it really be like to live on the Moon?</p>
 		</div>
 </header>
 <div class="container">
@@ -86,9 +88,36 @@
 			<div class="innerDiv">
 				<h1>Lalande Crater: Young, Equatorial, Mineral-rich</h1>
 				<p>
-The first virtual colony being built is a town beside Lalande Crater. It is
-there because the region has the Moon's highest concentrations of rare earth
-elements, including T
+The first virtual colony being built is a town beside Lalande Crater,
+population: 20,000. It is
+there because the region has the Moon's highest concentrations of
+potassium, phosphorus, and rare earth elements, including thorium. It also has
+among the highest levels of titanium and iron. It is on the shore of
+a lunar 'sea', so the minerals of both the highlands
+and the basalt seas are close by. Lastly,
+it is one of the Moon's youngest large craters, so bedrock is close to the
+surface, making it one of the very best places to get hold of pure minerals,
+instead of the powdered mixtures in the surface soil.
+<br><br>
+The premise is that the most
+important industry on the Moon will be construction, both for expansion of
+lunar colonies and for building things to send into space, such as spaceships,
+space stations, satellites, and orbiting tethers. Income from selling space
+infrastructure depends on the ability to
+fabricate large and complex items on industrial scales. Income from selling residence,
+tours, and broadcasting also depends on large pleasant facilities
+and habitats being erected. Both things require vast quantities of a variety
+of minerals, Lalande has top reserves of them all.
+<br><br>
+That makes it the best place to put the heavy industry that fabricates these
+things - what it lacks is relatively light and can be brought from the
+north pole or from asteroids mined in orbit.
+Its advantageous position at the equator for launch and landing makes it
+an excellent place for a large space port handling high volumes of cargo.
+There are also several neat tricks
+one can do in a young crater to create efficient, pleasant architecture.
+The big money is going to be at
+Lalande, so it has the first boom-town.
 				</p>
 			</div>
 		</div>
