header css resolved
Former-commit-id: 893badee0fca53bf556ad165e218711e3e745322

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
   				</ul>
   		</nav>
 		<header>
-				<img class="sec1" src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+			<div class="sec1">
+				<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+			</div>
 				<div class="sec2">
 				 <p class="accent">What would it really be like<br> to live on the Moon?</p>
 				</div>
