--- a/rotovator.html
+++ b/rotovator.html
@@ -70,8 +70,10 @@
   				</ul>
   		</nav>
 		<header>
-				<img class="sec1" src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
-				<div class="sec2">
+			<div id="Logo">
+				<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+			</div>
+			<div id="note">
 				 <p class="accent">What would it really be like<br> to live on the Moon?</p>
 				</div>
 	</header>
