layout on colonies.html
Former-commit-id: 2314057385810e38198e2e8b391e77e6a147beed

--- a/colonies.html
+++ b/colonies.html
@@ -78,11 +78,19 @@
 	<div id="Logo">
 		<img src="http://www.moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 	</div>
-		<div id="note">
-		 <p class="accent">What would it really be like to live on the Moon?</p>
-		</div>
+	<div class="intro">
+			<h1>The Colonies</h1>
+			<p>To settle the Moon you have to find the right place, set up
+			the right transport, and pursue the right business. All of these
+			matters are open questions. Often the best options are ignored
+			because it would be too expensive under current budgets, or there
+			would be too much resistance from people who don't understand
+			the risks and benefits of the technology involved. Consistent,
+			ongoing high investment changes the possibilities and the best path.
+			</p>
+	</div>
 </header>
-<div class="container">
+	<div class="container">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
@@ -123,6 +131,7 @@ Lalande, so it has the first boom-town.
 		</div>
 	</section>
 	<aside>
+
 	</aside>
 </div>
 
