--- a/index.html
+++ b/index.html
@@ -77,12 +77,8 @@
   				</ul>
   		</nav>
 		<header>
-			<div class="sec1">
-				<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
-			</div>
-				<div class="sec2">
-				 <p class="accent">What would it really be like<br> to live on the Moon?</p>
-				</div>
+				<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="Logo">
+				 <p id='note'>What would it really be like<br> to live on the Moon?</p>
 	</header>
 <div class="container">
 	<section>
