new lalande img, work on colonies.html
Former-commit-id: 62d138d2f24c8a22e7af94a71232a7aa7dfe3cf8 [formerly 8a77bfe6520b25ddd4b101415998ab3da6b30df8]
Former-commit-id: 2bdaeedc9835c32f07f538242d3d4275b7bb7ee5

--- a/colonies.html
+++ b/colonies.html
@@ -96,42 +96,47 @@
 			<div class="innerDiv">
 				<h1>Lalande Crater: Young, Equatorial, Mineral-rich</h1>
 				<p>
-The first virtual colony being built is a town beside Lalande Crater,
-population: 20,000. It is
-there because the region has the Moon's highest concentrations of
-potassium, phosphorus, and rare earth elements, including thorium. It also has
-among the highest levels of titanium and iron. It is on the shore of
-a lunar 'sea', so the minerals of both the highlands
-and the basalt seas are close by. Lastly,
-it is one of the Moon's youngest large craters, so bedrock is close to the
-surface, making it one of the very best places to get hold of pure minerals,
-instead of the powdered mixtures in the surface soil.
-<br><br>
-The premise is that the most
-important industry on the Moon will be construction, both for expansion of
-lunar colonies and for building things to send into space, such as spaceships,
-space stations, satellites, and orbiting tethers. Income from selling space
-infrastructure depends on the ability to
-fabricate large and complex items on industrial scales. Income from selling residence,
-tours, and broadcasting also depends on large pleasant facilities
-and habitats being erected. Both things require vast quantities of a variety
-of minerals, Lalande has top reserves of them all.
-<br><br>
-That makes it the best place to put the heavy industry that fabricates these
-things - what it lacks is relatively light and can be brought from the
-north pole or from asteroids mined in orbit.
-Its advantageous position at the equator for launch and landing makes it
-an excellent place for a large space port handling high volumes of cargo.
-There are also several neat tricks
-one can do in a young crater to create efficient, pleasant architecture.
-The big money is going to be at
-Lalande, so it has the first boom-town.
+			The first virtual colony being built is a town beside Lalande Crater,
+			population: 20,000. It is
+			there because the region has the Moon's highest concentrations of
+			potassium, phosphorus, and rare earth elements, including thorium. It also has
+			among the highest levels of titanium and iron. It is on the shore of
+			a lunar 'sea', so the minerals of both the highlands
+			and the basalt seas are close by. Lastly,
+			it is one of the Moon's youngest large craters, so bedrock is close to the
+			surface, making it one of the very best places to get hold of pure minerals,
+			instead of the powdered mixtures in the surface soil.
+			<br><br>
+			The premise is that the most
+			important industry on the Moon will be construction, both for expansion of
+			lunar colonies and for building things to send into space, such as spaceships,
+			space stations, satellites, and orbiting tethers. Income from selling space
+			infrastructure depends on the ability to
+			fabricate large and complex items on industrial scales. Income from selling residence,
+			tours, and broadcasting also depends on large pleasant facilities
+			and habitats being erected. Both things require vast quantities of a variety
+			of minerals, Lalande has top reserves of them all.
+			<br><br>
+			That makes it the best place to put the heavy industry that fabricates these
+			things - what it lacks is relatively light and can be brought from the
+			north pole or from asteroids mined in orbit.
+			Its advantageous position at the equator for launch and landing makes it
+			an excellent place for a large space port handling high volumes of cargo.
+			There are also several neat tricks
+			one can do in a young crater to create efficient, pleasant architecture.
+			The big money is going to be at
+			Lalande, so it has the first boom-town.
 				</p>
 			</div>
 		</div>
 	</section>
 	<aside>
-
+		<div class="sideDiv">
+			<img src="img/LalandeWideshot.jpg" alt="Lalande Region">
+			<p>The equatorial region around
+			Lalande Crater, showing the ejecta blanket from the impact that created
+			it as lighter soil, and the many highland hills nearby</p>
+		</div>
 	</aside>
 </div>
 
