colonies content added
Former-commit-id: accccbe614e2786bd68ae763fc452cdbf91dcb30 [formerly 2bb22dc4fb1cb107c67c3f1cad196d8e000d15e5]
Former-commit-id: ceaf73f79c54a26ce7b7464cc6de7c1611d60adf

--- a/colonies.html
+++ b/colonies.html
@@ -11,7 +11,7 @@
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/content.nest.css">
-		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
+		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
 		<script src="js/modernizr-2.8.3.min.js"></script>
 	</head>
 <body>
@@ -76,7 +76,7 @@
 	</nav>
 <header>
 	<div id="Logo">
-		<img src="http://www.moonwards.com/img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+		<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 	</div>
 	<div class="intro">
 			<h1>The Colonies</h1>
@@ -128,18 +128,45 @@
 			Lalande, so it has the first boom-town.
 				</p>
 			</div>
+			<div class="innerDiv">
+				<h2>Click an image to go to the page on Lalande Crater
+				</h2>
+				<div class="gallery">
+					<img src="img/Thumb-LalandeCrop.jpg">
+					<img src="img/Thumb-LalandeTempDiff.jpg">
+					<img src="img/Thumb-Lal-boulders2.jpg">
+					<img src="img/Thumb-Lunar_Thorium_hotspots.jpg">
+				</div>
+			</div>
 		</div>
 	</section>
 	<aside>
-		<div class="sideDiv">
+		<figure class="sideDiv">
 			<img src="img/LalandeWideshot.jpg" alt="Lalande Region">
-			<p>The equatorial region around
+			<figcaption>The equatorial region around
 			Lalande Crater, showing the ejecta blanket from the impact that created
-			it as lighter soil, and the many highland hills nearby</p>
-		</div>
+			it as lighter soil, and the many highland hills nearby</figcaption>
+		</figure>
+		<figure class="sideDiv">
+			<img src="img/Apollo16full750.jpg" alt="Apollo 16 photo of Lalande from
+			orbit">
+			<figcaption> A photo taken of Lalande Crater by Apollo 16 from orbit,
+				viewing it from the south. <a href="lalande.html">More images and
+					information on Lalande</a>
+			</figcaption>
 	</aside>
 </div>
-
+<div class="container">
+	here i'm putting the new sketchfab models. The
+	sketchfab embeds have an option for autostart,
+	so i think the proxies can be set up that way so
+	the sketchfab model loads when it is clicked without the current problem
+	that you have to then click again. Also the introductory animation can
+	be set to not play. The help for this is at https://help.sketchfab.com/hc/en-us/articles/203509907-Share-Embed-Online
+	I think i'll also make an accordion section where the models are.
+	that way if people have a slow device, they can 
+	just scroll quickly past it and see the next thing.
+</div>
 
 </body>
 </html>
