sketchfabs added to colonies page
Former-commit-id: 54e1580321bac9e35e1b07005a3d0d271f60aaa5

--- a/colonies.html
+++ b/colonies.html
@@ -4,7 +4,6 @@
 		<title>Moonwards</title>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<meta name="theme-color" content="#ffffff">
 		<meta name="description" content="What would it really be like to live on the Moon?">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
@@ -12,7 +11,6 @@
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/content.nest.css">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
-		<script src="js/modernizr-2.8.3.min.js"></script>
 	</head>
 <body>
 	<!--[if lt IE 9]>
@@ -156,13 +154,44 @@
 			</figcaption>
 	</aside>
 </div>
-<div class="container">
-	<section class="innerDiv framewrap frame16x9">
-					<iframe src="modelProxy1.html" frameborder="0" allowfullscreen
+<div class="container_SF_iframe">
+	<div class="SF-Div">
+		<h2>Interactive 3d models</h2>
+		Press the play arrow to load the 3d models
+		below (twice - it's a page-load-time thing). Check out the controls at the bottom
+		of the model window - especially the bar to click through the
+		annotations, and the double arrows in the corner to make it
+		full screen.<br><br>
+		These models are in development, both in what is in them, and in how it
+		is presented. They go through spurts of changes, which should become
+		more frequent and dramatic with time. Right now they are at a pretty early
+		stage.
+	</div>
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy10.html" frameborder="0" allowfullscreen
 					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 					</iframe>
 	</section>
-
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy11.html" frameborder="0" allowfullscreen
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					</iframe>
+	</section>
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy12.html" frameborder="0" allowfullscreen
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					</iframe>
+	</section>
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy13.html" frameborder="0" allowfullscreen
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					</iframe>
+	</section>
+	<section class="framewrap frame16x9">
+					<iframe src="modelProxy14.html" frameborder="0" allowfullscreen
+					mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+					</iframe>
+	</section>
 </div>
 
 </body>
