work on machines.html
Former-commit-id: b601b2d2777741be1f0d9190acb50c9f09759bd4

--- a/colonies.html
+++ b/colonies.html
@@ -4,7 +4,11 @@
 		<title>Moonwards</title>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<meta name="description" content="What would it really be like to live on the Moon?">
+		<meta name="theme-color" content="#ffffff">
+		<meta name="description" content="A realistic lunar colony. What would it be like
+		to settle the Moon? Space settlement will change the future of humanity. This
+		virtual colony will show the technology and science involved. It will show
+		the challenges and opportunites of low gravity, the vacuum of space, radiation.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
@@ -26,8 +30,8 @@
 	  </script>
 	  <noscript>
 
-	     Your browser is obsolete, or it has Javascript turned off. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers or ones without Javascript. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions, with or without Javascript. And if you are concerned about vulnerabilities due to scripts, you'd do better to uninstall Java (which is a different language), get rid of Adobe Reader (Firefox and Chrome can both read .pdf files without the reader), and keep your browser up to date. Look for security and privacy add-ons as well for peace of mind.
-			 Really, on behalf of The Web, please upgrade to a modern browser and don't turn off Javascript.
+	     Say, your browser is obsolete. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions,
+			 Really, on behalf of The Web, please upgrade to a modern browser.
 			 Thank you, thank you, thank you.
 			 	<a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>
 			 	<a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome</a>
@@ -88,7 +92,7 @@
 			</p>
 	</div>
 </header>
-	<div class="container">
+<div class="container">
 	<section>
 		<div class="outerDiv">
 			<div class="innerDiv">
