--- a/content-base-template.html
+++ b/content-base-template.html
@@ -15,6 +15,7 @@
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<link rel="stylesheet" href="css/content.nest.css">
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	</head>
 <body>
 	<!--[if lt IE 9]>
@@ -82,81 +83,13 @@
 					<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
 				</div>
 				<div class="intro">
-						<h1>The Machines that make it Possible</h1>
-						<p>Even to reach space we need incredibly complex machines. To live
-							there we will need machines that can do any physical task we can,
-							see as well or better, that anticipate, compensate, and make
-							judgement calls. Recent advancements in robotics stand beside
-							reusable rockets as new factors accelerating our advance into space.
-							The Moon's harsh surface is no place for a human to work.
-							Spacesuits make you very clumsy, and a ton of infrastructure is
-							needed to keep you alive and safe. Bring on the robots.
+						<h1>Headlline</h1>
+						<p>Short intro paragraph.
 						</p>
 				</div>
 			</header>
 <div class="container">
-	<section>
-	<div class="outerDiv">
-		<div class="innerDiv">
-			<h1>Rovers and Robots - the Workhorses</h1>
-			<p>
-				In this project, the approach is taken that the first missions to settle
-				the Moon will focus on developing the robotic infrastructure needed to
-				do construction entirely without humans present. Such robots do not yet
-				exist, but the field is advancing quickly and development of that
-				technology has a wealth of applications here on Earth. A few missions
-				would be needed where a minimal crew go to support the prototype robots,
-				testing and fixing them, until there is confidence the robots can be
-				operated remotely from Earth. After that, construction proceeds without
-				anyone on-site. Once the atrium hab is near completion, again a crew
-				arrives. They test the hab, maybe fix a few things. Then they stay.
-				After that the human population ramps up quickly and they operate the
-				robotic machinery from within the habs.
-				<br><br>
-				So, great things come from great robots. Rovers in space are already
-				designed to handle factors not present on Earth. Rovers and robots on
-				the Moon will have extra challenges that have not yet been solved. The
-				list below takes them in ascending order of difficulty:
-			</p>
-				<ul>
-				<li>The	high radiation environment, which requires special design of computer
-					components. This technology is well developed, but does add cost and
-				  increases the bulk of components.</li>
-				<li>The 290 K temperature swing between day and night. Two key things
-				are important here:
-					<ul>
-						<li>Thermal wadis - which are masses of solid stone
-				that store heat far better than the powdery soil. If a rover can
-				snuggle up to one and throw a reflective tarp over itself to slow
-				heat loss, the cold it has to withstand overnight is greatly reduced.
-				</li>
-					<li>Nuclear power - there is no reason to fear nuclear power on the
-						Moon. It is a great way to get through the long cold night, when
-						there is no solar power. Robots working at night can run their
-						heaters by drawing power beamed to them as microwaves from the
-						nuclear power plant
-					</li>
-				</ul> </li>
-				<li>
-				The extremely abrasive, finely
-				powdered soil that will grind away at any moving part it gets into.
-			</li>
-			<li>
-				The 3 second round-trip transmission delay between Earth and Moon,
-				that will need to be designed for to make remote operation work.
-			</li>
-		</div>
-	</div>
-</section>
-<aside>
-	<div class="sideDiv">
-		<div class="framewrap frame16x9">
-				<iframe
-				src="https://www.youtube.com/embed/Tb0_GNyczCA"
-				allowfullscreen></iframe>
-		</div>
-	</div>
-</aside>
+
 </div>
 </body>
 </html>
