--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	  </script>
 	  <noscript>
 
-	     Gee, your browser is obsolete. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions,
+	     Say, your browser is obsolete. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions,
 			 Really, on behalf of The Web, please upgrade to a modern browser.
 			 Thank you, thank you, thank you.
 			 	<a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>
@@ -154,7 +154,8 @@ If you can't see our RSS feed, you need to enable Javascript
 		</div>
 		<div class="sideDiv">
 			<div class="framewrap frame16x9">
-			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec"  allowfullscreen></iframe>
+			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec"
+					allowfullscreen></iframe>
 			</div>
 		</div>
 </aside>
