work on machines.html
Former-commit-id: 269ba8839884f9142267838e75715de4069cd84e [formerly b601b2d2777741be1f0d9190acb50c9f09759bd4]
Former-commit-id: 52bb636716ad012a709dc7877bb4768d154ab27c

--- a/machines.html
+++ b/machines.html
@@ -1,18 +1,20 @@
-<!doctype html>
-<html class="no-js" lang="en-US">
+!doctype html>
+<html lang="en-US">
 	<head>
 		<title>Moonwards</title>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		<meta name="theme-color" content="#ffffff">
-		<meta name="description" content="What would it really be like to live on the Moon?">
+		<meta name="description" content="A realistic lunar colony. What would it be like
+		to settle the Moon? Space settlement will change the future of humanity. This
+		virtual colony will show the technology and science involved. It will show
+		the challenges and opportunites of low gravity, the vacuum of space, radiation.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-		<link rel="stylesheet" href="css/main.nest.css">
-		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
-		<script src="js/modernizr-2.8.3.min.js"></script>
+		<link rel="stylesheet" href="css/content.nest.css">
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">		<script src="js/modernizr-2.8.3.min.js"></script>
 	</head>
 <body>
 	<!--[if lt IE 9]>
@@ -28,9 +30,8 @@
 	  </script>
 	  <noscript>
 
-	     Your browser is obsolete, or it has Javascript turned off. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers or ones without Javascript. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions, with or without Javascript. And if you are concerned about vulnerabilities due to scripts, you'd do better to uninstall Java (which is a different language), get rid of Adobe Reader (Firefox and Chrome can both read .pdf files without the reader), and keep your browser up to date. Look for security and privacy add-ons as well for peace of mind.
-			 Really, on behalf of The Web, please upgrade to a modern browser
-			 and don't turn off Javascript.
+	     Say, your browser is obsolete. This site uses a lot of 3d media and has a lot of other content that won't work on older browsers. Please please upgrade your browser. Firefox and Chrome are both more secure than old Internet Explorer versions,
+			 Really, on behalf of The Web, please upgrade to a modern browser.
 			 Thank you, thank you, thank you.
 			 	<a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a>
 			 	<a href="https://www.google.com/chrome/browser/desktop/index.html">Chrome</a>
@@ -38,60 +39,124 @@
 
 	  </noscript>
 	<![endif]-->
-	<nav>
-			<ul>
-			<li><a href="index.html">Mission</a>
-			<ul class="dropdown">
-					<li><a href="index.html#timeline">Timeline</a></li>
-					<li><a href="index.html#sitemap">Site Map</a></li>
-				</ul>
-			</li>
-			<li><a href="colonies.html">Colonies</a>
-				<ul class="dropdown">
-						<li><a href="colonies.html#lalande">Lalande</a></li>
-						<li><a href="colonies.html#peary">Peary</a></li>
-						<li><a href="colonies.html#orbital">Orbital</a></li>
-					</ul>
-				</li>
-				<li><a href="machines.html">Machines</a>
-				<ul>
-						<li><a href="machines.html#robots">Robots</a></li>
-						<li><a href="machines.html#construction">Construction</a></li>
-						<li><a href="machines.html#power">Power</a></li>
-						<li><a href="machines.html#extraction">Extraction</a></li>
-						<li><a href="machines.html#transport">Transport</a></li>
-					</ul>
-				</li>
-				<li><a href="project.html">Project</a>
-					<ul>
-						<li><a href="project.html#chart">Chart</a></li>
-					</ul>
-				</li>
-				<li><a href="learn.html">Learn</a>
-					<ul>
-						<li><a href="learn.html#interactives">Interactives</a></li>
-						<li><a href="learn.html#lessons">Lessons</a></li>
-					</ul>
-				</li>
-			</ul>
-	</nav>
-<header>
-		<img class="sec1" src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
-		<div class="sec2">
-		 <p class="accent">What would it really be like<br> to live on the Moon?</p>
-		</div>
-</header>
+	  	<nav>
+  				<ul>
+  				<li><a href="index.html">Mission</a>
+ 		 			<ul class="dropdown">
+ 		 					<li><a href="index.html#timeline">Timeline</a></li>
+ 		 					<li><a href="index.html#sitemap">Site Map</a></li>
+ 		 				</ul>
+  				</li>
+  				<li><a href="colonies.html">Colonies</a>
+  					<ul class="dropdown">
+  							<li><a href="colonies.html#lalande">Lalande</a></li>
+  							<li><a href="colonies.html#peary">Peary</a></li>
+  							<li><a href="colonies.html#orbital">Orbital</a></li>
+  						</ul>
+  					</li>
+  					<li><a href="machines.html">Machines</a>
+  					<ul>
+  							<li><a href="machines.html#robots">Robots</a></li>
+  							<li><a href="machines.html#construction">Construction</a></li>
+  							<li><a href="machines.html#power">Power</a></li>
+  							<li><a href="machines.html#extraction">Extraction</a></li>
+  							<li><a href="machines.html#transport">Transport</a></li>
+  						</ul>
+  					</li>
+  					<li><a href="project.html">Project</a>
+  						<ul>
+  							<li><a href="project.html#chart">Chart</a></li>
+								<li><a href="http://moonwards1.blogspot.com/">Blog</a></li>
+  						</ul>
+  					</li>
+  					<li><a href="learn.html">Learn</a>
+  						<ul>
+  							<li><a href="learn.html#interactives">Interactives</a></li>
+  							<li><a href="learn.html#lessons">Lessons</a></li>
+  						</ul>
+  					</li>
+  				</ul>
+  		</nav>
+			<header>
+				<div id="Logo">
+					<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="logo">
+				</div>
+				<div class="intro">
+						<h1>The Machines that make it Possible</h1>
+						<p>Even to reach space we need incredibly complex machines. To live
+							there we will need machines that can do any physical task we can,
+							see as well or better, that anticipate, compensate, and make
+							judgement calls. Recent advancements in robotics stand beside
+							reusable rockets as new factors accelerating our advance into space.
+							The Moon's harsh surface is no place for a human to work.
+							Spacesuits make you very clumsy, and a ton of infrastructure is
+							needed to keep you alive and safe. Bring on the robots.
+						</p>
+				</div>
+			</header>
 <div class="container">
 	<section>
-		<div class="outerDiv">
-			<div class="innerDiv">
-			</div>
+	<div class="outerDiv">
+		<div class="innerDiv">
+			<h1>Rovers and Robots - the Workhorses</h1>
+			<p>
+				In this project, the approach is taken that the first missions to settle
+				the Moon will focus on developing the robotic infrastructure needed to
+				do construction entirely without humans present. Such robots do not yet
+				exist, but the field is advancing quickly and development of that
+				technology has a wealth of applications here on Earth. A few missions
+				would be needed where a minimal crew go to support the prototype robots,
+				testing and fixing them, until there is confidence the robots can be
+				operated remotely from Earth. After that, construction proceeds without
+				anyone on-site. Once the atrium hab is near completion, again a crew
+				arrives. They test the hab, maybe fix a few things. Then they stay.
+				After that the human population ramps up quickly and they operate the
+				robotic machinery from within the habs.
+				<br><br>
+				So, great things come from great robots. Rovers in space are already
+				designed to handle factors not present on Earth. Rovers and robots on
+				the Moon will have extra challenges that have not yet been solved. The
+				list below takes them in ascending order of difficulty:
+			</p>
+				<ul>
+				<li>The	high radiation environment, which requires special design of computer
+					components. This technology is well developed, but does add cost and
+				  increases the bulk of components.</li>
+				<li>The 290 K temperature swing between day and night. Two key things
+				are important here:
+					<ul>
+						<li>Thermal wadis - which are masses of solid stone
+				that store heat far better than the powdery soil. If a rover can
+				snuggle up to one and throw a reflective tarp over itself to slow
+				heat loss, the cold it has to withstand overnight is greatly reduced.
+				</li>
+					<li>Nuclear power - there is no reason to fear nuclear power on the
+						Moon. It is a great way to get through the long cold night, when
+						there is no solar power. Robots working at night can run their
+						heaters by drawing power beamed to them as microwaves from the
+						nuclear power plant
+					</li>
+				</ul> </li>
+				<li>
+				The extremely abrasive, finely
+				powdered soil that will grind away at any moving part it gets into.
+			</li>
+			<li>
+				The 3 second round-trip transmission delay between Earth and Moon,
+				that will need to be designed for to make remote operation work.
+			</li>
 		</div>
-	</section>
-	<aside>
-	</aside>
+	</div>
+</section>
+<aside>
+	<div class="sideDiv">
+		<div class="framewrap frame16x9">
+				<iframe
+				src="https://www.youtube.com/embed/Tb0_GNyczCA"
+				allowfullscreen></iframe>
+		</div>
+	</div>
+</aside>
 </div>
-
-
 </body>
 </html>
